# aish

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  config.toml.example
.claude/: settings.json
.claude/memory/: design-decisions.md
.github/workflows/: release.yml
docs/: BUILD.md  DESIGN.md  SPEC.md
src/: ai.rs  config.rs  context.rs  input.rs  main.rs  marker.rs  mode.rs  prompt_sniffer.rs  pty_handler.rs  ring_buffer.rs  shell.rs  ssh.rs  ui.rs  update.rs
src/ai/: chatgpt.rs  claude.rs  gemini.rs  mod.rs  types.rs
