[package]
name = "aish"
version = "0.1.7"
edition = "2021"
description = "CLI SSH + AI (Claude Code)"
license = "MIT"

[package.metadata.deb]
maintainer = "tryandhappy"
section = "utils"
assets = [
    ["target/release/aish", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/aish", dest = "/usr/bin/aish", mode = "0755" },
]

[dependencies]
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
strip-ansi-escapes = "0.2"
dirs = "5"
unicode-width = "0.2"
libc = "0.2"
